--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.scss
@@ -1,93 +1,174 @@
 @import '../../../../../../assets/styles/variables';
 @import '../../../../../../assets/styles/font-icons';
-.trip-info-container {
-  button {
-    padding: 0;
-    border: 0;
-    background: transparent;
-    &:focus {
-      outline: 0;
+
+$text-line-height: 16px;
+$text-margin: 5px;
+
+.trip-container {
+  .trip-info-container {
+    button {
+      padding: 0;
+      border: 0;
+      background: transparent;
+
+      &:focus {
+        outline: 0;
+      }
     }
-  }
-  span {
-    line-height: 16px;
-  }
-  display: flex;
-  border: $border;
-  margin: 10px;
-  background: $white;
-  border-radius: $default-border-radius;
-  flex-direction: row;
-  .left-panel {
+
+    span {
+      line-height: $text-line-height;
+    }
+
     display: flex;
-    width: 50%;
-    padding: $default-margin;
-    flex-direction: column;
-    .trip-info-header {
+    border: $border;
+    margin: 10px;
+    background: $white;
+    border-radius: $default-border-radius;
+    flex-direction: row;
+
+    .left-panel {
       display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .trip-number {
-        color: $black;
-      }
-      .buttons-panel {
-        display: inline;
-        color: $dark-grey;
-        button {
-          padding: 0 5px;
+      width: 50%;
+      padding: $default-margin;
+      flex-direction: column;
+
+      .trip-info-header {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .trip-number {
+          color: $black;
+        }
+
+        .buttons-panel {
+          display: inline;
+          color: $dark-grey;
+
+          button {
+            padding: 0 $text-margin;
+
+            &:hover {
+              color: $blue;
+            }
+          }
         }
       }
-    }
-    .driver-info {
-      display: flex;
-      color: $dark-grey;
-      align-items: center;
-      .initials-circle {
-        display: inline-block;
-        margin-right: 5px;
+
+      .driver-container {
+        .driver-info {
+          display: flex;
+          color: $dark-grey;
+          align-items: center;
+
+          .initials-circle {
+            display: inline-block;
+            margin-right: $text-margin;
+          }
+
+          .driver-count {
+            margin-left: $text-margin;
+          }
+
+          &:not(:first-of-type) {
+            display: none;
+          }
+        }
       }
-      .driver-count {
-        margin-left: 5px;
+      
+      .trailer-info {
+        overflow: hidden;
+        color: $dark-grey;
+        white-space: nowrap;
+        text-overflow: ellipsis;
       }
     }
-    .trailer-info {
-      overflow: hidden;
-      color: $dark-grey;
-      white-space: nowrap;
-      text-overflow: ellipsis;
+
+    .right-panel {
+      width: 50%;
+      padding: $default-margin;
+      border-left: $border;
+
+      .appointment-type {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .type-container {
+          display: flex;
+          align-items: center;
+
+          span {
+            line-height: $text-line-height;
+
+            &.circle {
+              display: inline-block;
+              width: 12px;
+              height: 12px;
+              background: $blue;
+              border-radius: 50%;
+              margin-right: $text-margin;
+            }
+          }
+        }
+      }
+
+      .date-range-container {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .date {
+          display: flex;
+          flex-direction: column;
+        }
+      }
     }
   }
-  .right-panel {
-    width: 50%;
-    padding: $default-margin;
-    border-left: $border;
-    .appointment-type {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .type-container {
-        display: flex;
-        align-items: center;
-        .circle {
-          display: inline-block;
-          width: 12px;
-          height: 12px;
-          background: $blue;
-          border-radius: 50%;
-          margin-right: 5px;
-        }
-        .type {
-          line-height: $tiny-font-size;
-        }
+
+  .commodities-section {
+    border: $border;
+    margin: 10px;
+    border-bottom-right-radius: $default-border-radius;
+    border-bottom-left-radius: $default-border-radius;
+
+    .commodities-container {
+      border-left: 4px solid $grey;
+
+      &.pickup-border {
+        border-color: $pickup-view-mode-color;
+      }
+
+      &.dropoff-border {
+        border-color: $dropoff-view-mode-color;
+      }
+
+      .commodities-notes {
+        height: $form-control-height;
+        background: $white;
+        line-height: $form-control-height;
+        margin-left: $text-margin;
       }
     }
-    .date-range-container {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-between;
-      .date {
-        display: flex;
-        flex-direction: column;
+  }
+
+  &.expanded {
+    .trip-info-container {
+      border-bottom-right-radius: 0;
+      border-bottom-left-radius: 0;
+
+      .left-panel {
+
+        .driver-container {
+
+          .driver-info {
+
+            &:not(:first-of-type) {
+              display: flex;
+            }
+          }
+        }
       }
     }
   }
