--- a/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
+++ b/src/app/shared/components/bd-form-typeahead/bd-form-typeahead.component.html
@@ -10,6 +10,7 @@
   <bd-input [value]="value"
       (valueChange)="changeValue($event)"
       #input
+      [disabled]="disabled"
       (focusChange)="onFocusChanged($event)"
       [typeahead]="source"
       [collapsibleInput]="true"
