FSPA-388 create data model for itinerary

--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -16,7 +16,7 @@
 	</bd-form-section>
 	<navigation-anchor id="driver-payment" [isNestedForm]="isNestedForm"></navigation-anchor>
 	<bd-form-section [labelText]="'PAYMENT'">
-		<bd-dropdown class="bd-form-control" formControlName="paymentOption" [labelText]="'Payment options'" [items]="paymentsTypes">
+		<bd-dropdown class="bd-form-control" formControlName="paymentType" [labelText]="'Payment options'" [items]="paymentsTypes">
 		</bd-dropdown>
 		<bd-input class="bd-form-control" formControlName="rate" [labelText]="'Rate'">
 		</bd-input>
