--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -28,14 +28,14 @@
                           size='small'>
                       </bd-initials-circle>
                   </span>
-        <span class="driver-name">Vasya Pupkin</span>
+        <span class="driver-name">George Clooney</span>
         <span class="driver-count" *ngIf="!isExpanded">(+1)</span>
       </div>
       <div class="driver-info">
         <span class="initials-circle">
                       <bd-initials-circle
-                          [firstName]="'Ihor'"
-                          [lastName]="'Pidruchny'"
+                          [firstName]="'George'"
+                          [lastName]="'Clooney'"
                           size='small'>
                       </bd-initials-circle>
                   </span>
