FSPA-367 remove mark for check

--- a/src/app/companies/components/company-detail.component.html
+++ b/src/app/companies/components/company-detail.component.html
@@ -5,7 +5,7 @@
     [anchors]="anchors">
   </form-navigation>
   <company-form
-    [isLoading]="isLoading"
+    [isLoading]="isLoading$ | async"
     [scrollable]="true"
     [company]="selectedItem"
     [viewMode]="viewMode"
