--- a/src/app/loads/components/load-detail/load-detail.component.html
+++ b/src/app/loads/components/load-detail/load-detail.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="selectedItem">
   <form-navigation [title]="'Load'" [anchors]="anchors" sticky></form-navigation>
   <load-form
-    [isLoading]="isLoading"
+    [isLoading]="isLoading$ | async"
     (save)="onItemSave($event)"
     (cancel)="onItemCancel($event)"
     [load]="selectedItem"
