FSPA-384 #comment added disabled functionality to form components

--- a/src/app/companies/components/company-detail.component.html
+++ b/src/app/companies/components/company-detail.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="selectedItem">
   <form-navigation
     sticky
+    [disabled]="disabled"
     [title]="'Company'"
     [anchors]="anchors">
   </form-navigation>
