--- a/src/app/forms/address-form/address-form.component.html
+++ b/src/app/forms/address-form/address-form.component.html
@@ -49,6 +49,7 @@
 		</div>
 		<div class="right-side bottom-border">
 			<google-map
+        [disabled]="disabled"
 				[longitude]="_map.longitude"
         [latitude]="_map.latitude"
 				[info]="_map.labelText">
