--- a/src/app/shared/components/form-navigation/form-navigation.component.html
+++ b/src/app/shared/components/form-navigation/form-navigation.component.html
@@ -1,4 +1,4 @@
-<div class="form-navigation">
+<div [class.bd-disabled]="disabled" class="form-navigation">
   <p class="title">{{title}}</p>
   <bd-perfect-scrollbar class="container">
     <div class="content">
