--- a/src/app/shared/components/google-map/google-map.component.html
+++ b/src/app/shared/components/google-map/google-map.component.html
@@ -1,4 +1,4 @@
-<div class="map">
+<div class="map" [class.bd-disabled]="disabled">
 <div class="google-map" [id]="mapId"></div>
 <div class="google-map-info" [id]="mapId + '-info'" ></div>
 </div>
