--- a/src/app/shared/components/google-map/google-map.component.scss
+++ b/src/app/shared/components/google-map/google-map.component.scss
@@ -5,7 +5,13 @@
   overflow: hidden;
   width: 100%;
   height: 100%;
+
+  &.bd-disabled {
+    opacity: $disabled-opacity;
+  }
 }
+
+
 
 .google-map {
   width: 100%;
