FSPA-367 move form spinner in detail form

--- a/src/app/companies/components/company-detail.component.html
+++ b/src/app/companies/components/company-detail.component.html
@@ -1,11 +1,11 @@
 <div *ngIf="selectedItem">
+  <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
   <form-navigation
     sticky
     [title]="'Company'"
     [anchors]="anchors">
   </form-navigation>
   <company-form
-    [isLoading]="isLoading"
     [scrollable]="true"
     [company]="selectedItem"
     [viewMode]="viewMode"
