--- a/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
+++ b/src/app/loads/components/load-view-mode-card/load-view-mode-card.component.html
@@ -47,7 +47,7 @@
             <div class="notes">{{stop.facility.notes}}</div>
         </div>
     </div>
-        <trip-view [trip]="stop.tripStops[0]" [isExpanded]="isExpanded"></trip-view>
+        <trip-view [tripData]="tripStops[0]" [isExpanded]="isExpanded"></trip-view>
 </div>
 
 
