--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -2,7 +2,7 @@
   <div class="trip-info-container">
     <div class="left-panel">
       <div class="trip-info-header">
-        <span class="trip-number">TR3453563 :</span>
+        <span class="trip-number">TR{{tripData.trip.number}} : </span>
         <div class="buttons-panel">
           <button class="icon-fax"></button>
           <button class="icon-call"></button>
@@ -14,65 +14,47 @@
                             [width]="100"
                             [horizontalOffset]="-10"
                             [closeOnClickOutside]="closeOnClickOutside">
-                                <phone-popover [phoneNumber]="123123123"></phone-popover>
+                                <phone-popover [phoneNumber]="phoneNumber"></phone-popover>
                         </bd-popover-content>
                     </span>
         </div>
       </div>
       <div class="driver-container">
-              <div class="driver-info">
-        <span class="initials-circle">
-                      <bd-initials-circle
-                          [firstName]="'Vasya'"
-                          [lastName]="'Pupkin'"
-                          size='small'>
-                      </bd-initials-circle>
-                  </span>
-        <span class="driver-name">George Clooney</span>
-        <span class="driver-count" *ngIf="!isExpanded">(+1)</span>
-      </div>
-      <div class="driver-info">
-        <span class="initials-circle">
-                      <bd-initials-circle
-                          [firstName]="'George'"
-                          [lastName]="'Clooney'"
-                          size='small'>
-                      </bd-initials-circle>
-                  </span>
-        <span class="driver-name">Ihor Pidruchny</span>
-        <span class="driver-count" *ngIf="!isExpanded">(+1)</span>
-      </div>
-      <div class="driver-info">
-        <span class="initials-circle">
-                      <bd-initials-circle
-                          [firstName]="'Nick'"
-                          [lastName]="'Smith'"
-                          size='small'>
-                      </bd-initials-circle>
-                  </span>
-        <span class="driver-name">Nick Smith</span>
-        <span class="driver-count" *ngIf="!isExpanded">(+1)</span>
-      </div>
+        <div 
+          *ngFor="let driver of tripData.trip.driverTeams[0].drivers"
+          class="driver-info">
+          <span class="initials-circle">
+                  <bd-initials-circle
+                      [firstName]="driver.firstName"
+                      [lastName]="driver.lastName"
+                      size='small'>
+                  </bd-initials-circle>
+            </span>
+          <span class="driver-name">{{driver.firstName}} {{driver.lastName}}</span>
+          <span class="driver-count" *ngIf="tripData.trip.driverTeams[0].drivers.length > 1">
+            (+{{tripData.trip.driverTeams[0].drivers.length}})
+          </span>
+        </div>
       </div>
       <span class="trailer-info">
-          Kenworth 101, Wabash and some long long text
+          {{tripData.trip.trailer}}
       </span>
     </div>
     <div class="right-panel">
       <div class="appointment-type">
         <div class="type-container">
           <span class="circle"></span>
-          <span class="type">facs</span>
+          <span class="type">{{appointmentType}}</span>
         </div>
       </div>
       <div class="date-range-container">
         <div class="date first-date">
-          <span class="date-value">{{trip.appointment.from | date:'MM/dd/yy'}}</span>
-          <span class="time-value">{{trip.appointment.from | date:'HH:mm'}}</span>
+          <span class="date-value">{{tripData.appointment.from | date:'MM/dd/yy'}}</span>
+          <span class="time-value">{{tripData.appointment.from | date:'HH:mm'}}</span>
         </div>
         <div class="date last-date">
-          <span class="date-value">{{trip.appointment.to | date:'MM/dd/yy'}}</span>
-          <span class="time-value">{{trip.appointment.to | date:'HH:mm'}}</span>
+          <span class="date-value">{{tripData.appointment.to | date:'MM/dd/yy'}}</span>
+          <span class="time-value">{{tripData.appointment.to | date:'HH:mm'}}</span>
         </div>
       </div>
     </div>
