--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.scss
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.scss
@@ -164,9 +164,12 @@ $text-margin: 5px;
         .driver-container {
 
           .driver-info {
-
             &:not(:first-of-type) {
               display: flex;
+            }
+            
+            .driver-count {
+              display: none;
             }
           }
         }
