add trailer info to view

--- a/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/trip-view/trip-view.component.html
@@ -37,7 +37,7 @@
         </div>
       </div>
       <span class="trailer-info">
-          {{tripData.trip.trailer}}
+          {{tripData.trip.trailer.make}} {{tripData.trip.trailer.number}}, {{tripData.trip.trailer.model}}
       </span>
     </div>
     <div class="right-panel">
