FSPA-384 #comment added disabled functionality to driver, company forms, fixed bd-button component

--- a/src/app/companies/components/company-detail.component.html
+++ b/src/app/companies/components/company-detail.component.html
@@ -2,11 +2,12 @@
   <bd-form-spinner *ngIf="isLoading$ | async"></bd-form-spinner>
   <form-navigation
     sticky
-    [disabled]="disabled"
+    [disabled]="isLoading"
     [title]="'Company'"
     [anchors]="anchors">
   </form-navigation>
   <company-form
+    [disabled]="isLoading"
     [scrollable]="true"
     [company]="selectedItem"
     [viewMode]="viewMode"
