FSPA-384 #comment code refactoring

--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -25,13 +25,13 @@
   &:hover {
     background: $btn-primary-hover;
   }
-}
 
-.bd-disabled {
-  background: $btn-primary-focus;
-
-  &:hover {
+  &:active {
     background: $btn-primary-focus;
+
+    &:hover {
+      background: $btn-primary-focus;
+    }
   }
 }
 
