FSPA-384 #comment code refactoring

--- a/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
+++ b/src/app/shared/components/bd-buttons/bd-button/bd-button.component.scss
@@ -35,6 +35,14 @@
   }
 }
 
+.bd-disabled {
+  background: $btn-primary-focus;
+
+  &:hover {
+    background: $btn-primary-focus;
+  }
+}
+
 .default {
   background: $light-grey;
   color: $black;
