--- a/src/app/forms/driver-form/driver-form.component.html
+++ b/src/app/forms/driver-form/driver-form.component.html
@@ -28,11 +28,13 @@
 	<form-sticky-bottom-container [sticky]="!isNestedForm" *ngIf="isEditMode">
 		<div class="button-group">
 			<bd-button
+        [disabled]="disabled"
 				(click)="onCancel()"
 				[text]="'Cancel'"
 				class="button">
 			</bd-button>
 			<bd-button
+        [disabled]="disabled"
 				type="submit"
 				color="primary"
 				class="button"
