--- a/src/app/loads/components/load-view-mode-card/components/commodity-string/commodity-string.component.html
+++ b/src/app/loads/components/load-view-mode-card/components/commodity-string/commodity-string.component.html
@@ -1,10 +1,10 @@
 <div class="commodity-string-container">
     <div class="commodity-item">
-        {{index}}
+        <span>{{index}}</span>
     </div>
     <div
         *ngFor="let item of items;" 
         class="commodity-item">
-        {{item}}
+        <span>{{item}}</span>
     </div>
 </div>
