FSPA-366 update views

--- a/src/app/drivers/components/driver-card/driver-card.component.html
+++ b/src/app/drivers/components/driver-card/driver-card.component.html
@@ -17,7 +17,7 @@ class="driver-card-section"
     <div class="driver-type">{{driverTypeText}}</div>
   </div>
   <div class="middle">
-    <span class="driver-phone ellipsis">{{driver.primaryPhone}}</span>
+    <span class="driver-phone ellipsis">{{phone}}</span>
     <span class="send-message ellipsis">Send Message</span>
   </div>
   <div class="right">
