--- a/src/app/companies/components/company-card/company-card.component.html
+++ b/src/app/companies/components/company-card/company-card.component.html
@@ -13,7 +13,7 @@ class="company-card-section"
   <div class="middle">
     <span class="company-contact-full-name">{{company.contacts[0].firstName}} {{company.contacts[0].lastName}}</span>
     <span class="position ellipsis">{{company.contacts[0].position}}</span>
-  <div class="company-address-phone ellipsis">{{company.addresses[0].phone}}</div>
+  <div class="company-address-phone ellipsis">{{phone}}</div>
   </div>
   <div class="right">
     <div *ngFor="let load of company.loads" class="load">
